tests/miniJava/neg/004170_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java extends System.out.println java { }
